--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0-rc.13"
+  },
+  "dependencies": {
+    "swiper": "^8.4.5",
+    "tw-elements": "^1.0.0-alpha12"
   }
 }
