--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "graphql": "^16.6.0",
     "nuxt": "3.0.0-rc.13"
   },
   "dependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
+    "nuxt-graphql-client": "^0.2.24",
     "swiper": "^8.4.5",
     "tw-elements": "^1.0.0-alpha12"
   }
